--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,15 @@ Django==2.2.4
 django-exiffield==2.0.0
 isort==4.3.21
 jsonfield2==3.0.2
-lazy-object-proxy==1.4.1
+lazy-object-proxy==1.4.2
 mccabe==0.6.1
 Pillow==6.1.0
 pylint==2.3.1
+python-slugify==3.0.3
 pytz==2019.2
 six==1.12.0
-slugify==0.0.1
 sqlparse==0.3.0
+text-unidecode==1.2
 typed-ast==1.4.0
 uuid==1.30
 wrapt==1.11.2
