--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-astroid==2.2.5
-choicesenum==0.5.3
-Django==2.2.4
-django-exiffield==2.0.0
+asgiref==3.2.3
+astroid==2.3.3
+choicesenum==0.6.0
+Django==3.0.3
+django-exiffield==2.1.0
 isort==4.3.21
-jsonfield2==3.0.2
-lazy-object-proxy==1.4.2
+jsonfield2==4.0.0
+lazy-object-proxy==1.4.3
 mccabe==0.6.1
-Pillow==6.1.0
-pylint==2.3.1
-python-slugify==3.0.3
-pytz==2019.2
-six==1.12.0
-sqlparse==0.3.0
-text-unidecode==1.2
-typed-ast==1.4.0
+Pillow==7.0.0
+pylint==2.4.4
+python-slugify==4.0.0
+pytz==2019.3
+six==1.14.0
+sqlparse==0.3.1
+text-unidecode==1.3
+typed-ast==1.4.1
 uuid==1.30
-wrapt==1.11.2
+wrapt==1.12.0
