--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
-asgiref==3.2.3
-astroid==2.3.3
-choicesenum==0.6.0
-Django==3.0.3
-django-exiffield==2.1.0
-isort==4.3.21
-jsonfield2==4.0.0
-lazy-object-proxy==1.4.3
+asgiref==3.3.1
+astroid==2.5.1
+choicesenum==0.7.0
+Django==3.1.7
+django-exiffield==3.0.0
+isort==5.7.0
+jsonfield==3.1.0
+jsonfield2==4.0.0.post0
+lazy-object-proxy==1.5.2
 mccabe==0.6.1
-Pillow==7.0.0
-pylint==2.4.4
-python-slugify==4.0.0
-pytz==2019.3
-six==1.14.0
-sqlparse==0.3.1
+Pillow==8.1.1
+pylint==2.7.2
+python-slugify==4.0.1
+pytz==2021.1
+six==1.15.0
+sqlparse==0.4.1
 text-unidecode==1.3
-typed-ast==1.4.1
+toml==0.10.2
+typed-ast==1.4.2
 uuid==1.30
-wrapt==1.12.0
+wrapt==1.12.1
