--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-asgiref==3.3.1
-astroid==2.5.1
+asgiref==3.3.4
+astroid==2.5.6
+Brotli==1.0.9
 choicesenum==0.7.0
-Django==3.1.7
+Django==3.2
+django-cleanup==5.2.0
 django-exiffield==3.0.0
-isort==5.7.0
+isort==5.8.0
 jsonfield==3.1.0
 jsonfield2==4.0.0.post0
-lazy-object-proxy==1.5.2
+lazy-object-proxy==1.6.0
 mccabe==0.6.1
-Pillow==8.1.1
-pylint==2.7.2
-python-slugify==4.0.1
+Pillow==8.2.0
+pylint==2.8.2
+python-slugify==5.0.0
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
 text-unidecode==1.3
 toml==0.10.2
-typed-ast==1.4.2
+typed-ast==1.4.3
 uuid==1.30
+whitenoise==5.2.0
 wrapt==1.12.1
