--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ choicesenum==0.7.0
 Django==3.2
 django-cleanup==5.2.0
 django-exiffield==3.0.0
+ExifRead==2.3.2
 gunicorn==20.1.0
 isort==5.8.0
 jsonfield==3.1.0
@@ -21,6 +22,6 @@ text-unidecode==1.3
 toml==0.10.2
 typed-ast==1.4.3
 uuid==1.30
+uWSGI==2.0.19.1
 whitenoise==5.2.0
 wrapt==1.12.1
-uWSGI==2.0.19.1
