add 'about me' and 'projects' pages, version bumps

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ LETSENCRYPT_HOST=mywebsite.com
 
 DJANGO_KEY="change me"
 DJANGO_ALLOWED_HOSTS="mywebsite.com,www.mywebsite.com"
-DJANGO_DEBUG=True
+DJANGO_DEBUG=False
