--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   web:
     build: .
@@ -21,5 +19,5 @@ services:
 
 networks:
   default:
-    external:
       name: nginx-proxy
+      external: true
