--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,17 @@
-asgiref==3.4.1
-astroid==2.9.0
-backports.zoneinfo==0.2.1
-Brotli==1.0.9
+asgiref==3.8.1
 choicesenum==0.7.0
-Django==4.0
-django-cleanup==5.2.0
+Django==5.1.7
+django-cleanup==9.0.0
 django-exiffield==3.0.0
-ExifRead==2.3.2
-gunicorn==20.1.0
-isort==5.10.1
+django-jsonfield==1.4.1
+ExifRead==3.0.0
+gunicorn==23.0.0
 jsonfield==3.1.0
-jsonfield2==4.0.0.post0
-lazy-object-proxy==1.7.1
-mccabe==0.6.1
-Pillow==8.4.0
-platformdirs==2.4.0
-pylint==2.12.2
-python-slugify==5.0.2
-pytz==2021.3
-six==1.16.0
-sqlparse==0.4.2
+packaging==24.2
+pillow==11.1.0
+python-slugify==8.0.4
+six==1.17.0
+sqlparse==0.5.3
 text-unidecode==1.3
-toml==0.10.2
-typed-ast==1.5.1
-typing_extensions==4.0.1
-uuid==1.30
-uWSGI==2.0.20
-whitenoise==5.3.0
-wrapt==1.13.3
+uWSGI==2.0.28
+whitenoise==6.9.0
