fix uwsi static serving

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -8,4 +8,5 @@ threads=2
 vacuum=True
 max-requests=5000
 static-map=/media/=/app/media/
-static-expires-uri=/media/.*\.[a-f0-9]{12,}\.(css|js|png|jpg|jpeg|gif|ico|woff|ttf|otf|svg|scss|map|txt) 315360000
+static-map=/static/=/app/static/
+static-expires-uri=/media/.*\.[a-f0-9]{12,}\.(png|jpg|jpeg|gif) 315360000
